# AhoCorasickDocumentation

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  aho_corasick  mainpage.md
docs/: aho__corasick_8h_source.html  annotated.html  classACTrie-members.html  classAC_1_1AhoCorasickTri.html  classAC_1_1AhoCorasickTrie.html  classTrieNode-members.html  classes.html  dir_87375649b3e7d7c697447077174f0f2d.html  files.html  functions.html  functions_vars.html  namespaceAC.html
docs/html/: aho__corasick_8h_source.html  annotated.html  classACTrie-members.html  classACTrie.html  classAC_1_1AhoCorasick-members.html  classAC_1_1AhoCorasick.html  classAC_1_1AhoCorasickTri-members.html  classAC_1_1AhoCorasickTri.html  classAC_1_1AhoCorasickTrie-members.html  classAC_1_1AhoCorasickTrie.html  classAC_1_1Edge-members.html  classAC_1_1Edge.html  classAC_1_1EdgeList-members.html  classAC_1_1EdgeList.html  classAC_1_1Node-members.html  classAC_1_1Node.html  classN_1_1my__class-members.html  classN_1_1my__class.html  classTrieNode.html  classes.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  menudata.js  namespaceAC.html  namespaceN.html  namespaces.html
docs/latex/: aho__corasick_8h_source.tex  annotated.tex  classACTrie.eps  classACTrie.tex  classAC_1_1AhoCorasick.tex  classAC_1_1AhoCorasickTri.tex  classAC_1_1AhoCorasickTrie.eps  classAC_1_1AhoCorasickTrie.tex  classAC_1_1Edge.tex  classAC_1_1EdgeList.tex  classAC_1_1Node.eps  classAC_1_1Node.tex  files.tex  (+9 more)
hw1_4/: CMakeLists.txt  aho_corasick.cpp  aho_corasick.h  aho_corasick.test.cpp
(+47 files in other folders)
